WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188537
[iOS] Crash at -[UIViewController _presentViewController:withAnimationController:completion:]
https://bugs.webkit.org/show_bug.cgi?id=188537
Summary
[iOS] Crash at -[UIViewController _presentViewController:withAnimationControl...
James Savage
Reported
2018-08-13 15:13:10 PDT
<
rdar://problem/41400259
>
Attachments
Patch
(1.65 KB, patch)
2018-08-13 15:18 PDT
,
James Savage
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Savage
Comment 1
2018-08-13 15:18:45 PDT
Created
attachment 347049
[details]
Patch
WebKit Commit Bot
Comment 2
2018-08-13 17:39:10 PDT
Comment on
attachment 347049
[details]
Patch Clearing flags on attachment: 347049 Committed
r234831
: <
https://trac.webkit.org/changeset/234831
>
WebKit Commit Bot
Comment 3
2018-08-13 17:39:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug