[iOS] Crash at -[UIViewController _presentViewController:withAnimationController:completion:] https://bugs.webkit.org/show_bug.cgi?id=188537 <rdar://problem/41400259>

Patch by James Savage <james.savage@apple.com> on 2018-08-13
Reviewed by Tim Horton.

* platform/ios/ValidationBubbleIOS.mm:
(WebCore::ValidationBubble::show): Avoid hitting a UIKit exception for
presenting an already presented view controller by turning the scenario
into an early return.

Canonical link: https://commits.webkit.org/203626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234831 268f45cc-cd09-0410-ab3c-d52691b4dbfc